update overflow fix

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,10 @@
 html, body {
-  font-family: 'Montserrat';
-    background: #000046; /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #00546b, #000046); /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #00546b, #000046); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    padding:0;
+    margin:0;
+    font-family: 'Montserrat';
+    background: #000046; 
+    background: -webkit-linear-gradient(to right, #00546b, #000046); 
+    background: linear-gradient(to right, #00546b, #000046); 
 }
 
 .active{
